--- a/src/styles/history.css
+++ b/src/styles/history.css
@@ -403,3 +403,7 @@ tr:hover{
 .css-1c54o3z-MuiGrid-root>.MuiGrid-item{
     padding-top: 35px;
 }
+/* ╔═══════════════════════════════════════╗
+   ║               𝑏𝑦 𝑅𝑜𝑜𝑚67              ║
+   ║   🚪 The room where magic happens 🚪 ║
+   ╚═══════════════════════════════════════╝ */
