some modification in sohaila part

--- a/src/styles/NavCompStyle.css
+++ b/src/styles/NavCompStyle.css
@@ -1,6 +1,7 @@
 @media (min-width: 599px) {
+
     nav ul.MuiList-root > li:last-child {
-        margin-top: 530px !important;
+        margin-top: 63vh !important;
     }
 }
 @media (min-width: 1200px) {
