--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 /* Style for the Login Page */
-body {
+.container-big {
+  width: 100wh;
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -10,7 +11,6 @@ body {
   align-items: center;
   height: 100vh;
   background: linear-gradient(315deg, hsla(216, 21%, 91%, 1) 0%, hsla(186, 68%, 85%, 1) 95%);
-  /* Dégradé de fond */
   overflow-x: hidden;
 }
 
