--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 /* Style pour la page Signup uniquement */
-body {
+.signup-container-wrapper {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -10,6 +10,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #f0f8ff;
+  width: 100wh;
 }
 
 .signup-container {
